Simplified work of gc()